@@ -26,6 +26,7 @@ Version 1.5 (not yet released)
 - improved source files viewer (#346)
 - included outdated documentation was replaced with online wiki docs (#343)
 - more keyboard navigation shortcuts
+- saving PO files no longer reformats source code references (#323)
 
 
 Version 1.4.6
